updated devise logic for users controllers

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
                   } %>
         </li>
         <li>
-          <h2 class="text-danger ms-5 navname text-light d-flex justify-content-center"><%= current_user.user_name[0] %>
+          <h2 class="ms-5 navname text-light d-flex justify-content-center"><%= current_user.user_name[0] %>
           </h2>
         </li>
         <% else %>
